2010-01-22  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.127-1

2010-01-21  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#153980 Task button and status area are not shown on the desktop.

	The fix of NB#135337 made hdrm restack in home, it found the
	fullscreen window and made the status area and the tasks button
	go away.

	* src/home/hd-render-manager (hd_render_manager_set_visibilities):
	  Don't search for fullscreen windows beyond the desktop.

2010-01-21  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Amendment to NB#143253 to set correct button reaction size when
	the button is first realized.

	* src/mb/hd-theme.c (hd_theme_simple_get_button_size):
	  Override the width with the smaller one for the close button
	  if we are in/moving to portrait mode.

2010-01-21  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Fixes: NB#135012 - Device UI freezes for minutes when long-pressing
	the screenshot shortcut

	* src/main.c (take_screenshot): Limit the maximum frequency of taking
	screenshots to once every five seconds. Now if the shortcut is kept
	pressed down, the first keypress is handled and others are ignored
	until at least five seconds has passed from taking the screenshot.

	Fixes: NB#129916 - It is not possible to tap incoming Chat/SMS
	notification if there is Virtual Keyboard window visible.

	* src/mb/hd-wm.c (hd_wm_close_modal_blockers): Consider fullscreen VKB
	window as closeable blocker and close it.
	(hd_wm_is_fullscreen_vkb): Rather ugly way to recognise VKB window.

2010-01-20  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.127-1

2010-01-20  Marc Ordinas i Llopis <marc.ordinasillopis@collabora.co.uk>

	Check that the traversal hasn't been cancelled for each launcher tile,
	as signals can come in when the tile is created.
	Fixes: NB#153463

	* src/launcher/hd-launcher.c:

2010-01-20  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#143253 Portrait mode: close button reacts to presses outside
		  of its visible allocation
