@@ -1,5 +1,10 @@
 2010-01-22  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
 
+	* src/home/hd-render-manager.c (hd_render_manager_class_init,
+	hd_render_manager_set_state, hd_render_manager_get_property,
+	hd_render_manager_set_property): Remove unused "state" property and
+	signal.
+
 	Release 2.2.127-1
 
 2010-01-21  Adam Endrodi  <adam.endrodi@blumsoft.eu>
